compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__add_on_strings.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\"Hello, \" + \"Jak\""
---
----- SOURCE CODE
"Hello, " + "Jak"

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:11
  │
1 │ "Hello, " + "Jak"
  │           ^ Use <> instead

The + operator can only be used on Ints.
To join two strings together you can use the <> operator.
